@@ -1181,7 +1181,7 @@ item, as if the room number or area name had been specified.
 PROP_LOTFORSALE=\
 Property   : Prop_LotForSale\n\r\
 Targets    : Room\n\r\
-Parameters : (RENTAL) Price of the first room on the lot\n\r\
+Parameters : (RENTAL/GRID/NOTHEFT) [PRICE]\n\r\
 Example    : 1000000\n\r\
 Example    : Bob/100000\n\r\
 Example    : GRID 1000000\n\r\
@@ -1196,7 +1196,8 @@ automatically retract the created rooms. The word rental followed by a space may
 preceed the price to make the price of the property be charged every month \
 automatically out of a Bankers account.  Failure to make rent returns the property \
 to sellable status.  The word GRID followed by a space may preceed the price \
-to make new rooms automatically link to other rooms via demolishable walls.\n\r\
+to make new rooms automatically link to other rooms via demolishable walls. \
+The word NOTHEFT disables robbery law enforcement on the property. \n\r\
 \n\r\
 When property is sold, it will be listed as the owner with a slash and the price.  \
 Entering this sort of parameter directly is the quick way to give players or clans property. \n\r\
@@ -1209,7 +1210,7 @@ their property.
 PROP_LOTSFORSALE=\
 Property   : Prop_LotsForSale\n\r\
 Targets    : Room\n\r\
-Parameters : ([OWNER NAME]/)(RENTAL) (GRID) Price of each room on the lot\n\r\
+Parameters : ([OWNER NAME]/)(RENTAL) (GRID) (NOTHEFT) [PRICE]\n\r\
 Example    : 1000000\n\r\
 Example    : GRID 1000000\n\r\
 Example    : Bob/100000\n\r\
@@ -1222,10 +1223,11 @@ adjacent lots will automatically be created and put up for sale, \
 allowing the player to expand his or her property.  When the properties \
 are sold, or fall back out of any players possession, the system will \
 automatically retract the created rooms. The word RENTAL followed by a space may \
-preceed the price to make the price of the property be charged every month \
+precede the price to make the price of the property be charged every month \
 automatically out of a Bankers account.  Failure to make rent returns the property \
-to sellable status.  The word GRID followed by a space may preceed the price \
-to make new rooms automatically link to other rooms via demolishable walls.\n\r\
+to sellable status.  The word GRID followed by a space may precede the price \
+to make new rooms automatically link to other rooms via demolishable walls.\
+The word NOTHEFT disables robbery law enforcement on the property. \n\r\
 \n\r\
 When property is sold, it will be listed as the owner with a slash and the price.  \
 Entering this sort of parameter directly is the quick way to give players or clans property. \n\r\
@@ -1981,7 +1983,7 @@ argument.
 PROP_ROOMFORSALE=\
 Property   : Prop_RoomForSale\n\r\
 Targets    : Room\n\r\
-Parameters : (RENTAL) Price of the room\n\r\
+Parameters : (RENTAL/GRID/NOTHEFT) [PRICE]\n\r\
 Example    : 1000000\n\r\
 Example    : Bob/1000000\n\r\
 Description: \n\r\
@@ -1994,9 +1996,10 @@ After a room is sold, the player need only enter "LOOK ID" to see the rooms \
 ID for the purposes of identifying his or her lot in the future.  The title received \
 for purchasing a room may be GIVEn or SELLed to change possession of the property. \
 The word rental followed by a space may \
-preceed the price to make the price of the property be charged every month \
+precede the price to make the price of the property be charged every month \
 automatically out of a Bankers account.  Failure to make rent returns the property \
-to sellable status.\n\r\
+to sellable status.\
+The word NOTHEFT disables robbery law enforcement on the property. \n\r\
 \n\r\
 When property is sold, it will be listed as the owner with a slash and the price.  \
 Entering this sort of parameter directly is the quick way to give players or clans property.\n\r\
@@ -2018,7 +2021,7 @@ argument.
 PROP_ROOMPLUSFORSALE=\
 Property   : Prop_RoomsPlusForSale\n\r\
 Targets    : Room\n\r\
-Parameters : ([OWNER NAME]/)(RENTAL) (GRID) Price of the first room\n\r\
+Parameters : ([OWNER NAME]/)(RENTAL) (GRID) (NOTHEFT) [PRICE]\n\r\
 Example    : 1000000\n\r\
 Example    : GRID 1000000\n\r\
 Example    : The Bob Clan/1000000\n\r\
@@ -2027,9 +2030,9 @@ Description: \n\r\
 Makes this room available for purchase by a player.  If you have more than one \
 room for sale, they MUST be separated by at least one room which is \
 not for sale, otherwise both groups will be considered one.  This property is \
-identicla to Prop_RoomForSale or Prop_RoomsForSale, except that the building \
+identical to Prop_RoomForSale or Prop_RoomsForSale, except that the building \
 skills are permitted to add new rooms to it. See Prop_RoomForSale for more \
-information on sold rooms and the rental flag.  \n\r\
+information on sold rooms and the flags.  \n\r\
 \n\r\
 When property is sold, it will be listed as the owner with a slash and the price.  \
 Entering this sort of parameter directly is the quick way to give players or clans property.\n\r\
@@ -2057,7 +2060,7 @@ settings.
 PROP_ROOMSFORSALE=\
 Property   : Prop_RoomsForSale\n\r\
 Targets    : Room\n\r\
-Parameters : (RENTAL) Price of the group of rooms\n\r\
+Parameters : (RENTAL/GRID/NOTHEFT) [PRICE]\n\r\
 Example    : 1000000\n\r\
 Example    : The Bob Clan/1000000\n\r\
 Description: \n\r\
@@ -2065,7 +2068,7 @@ Makes this room part of a group of rooms available for purchase by a player.  \
 The rooms will be sold as a group by the shopkeeper.  If you have more than one \
 group of rooms for sale, they MUST be separated by at least one room which is \
 not for sale, otherwise both groups will be considered one.  See \
-Prop_RoomForSale for more information on sold rooms and the rental flag.  \n\r\
+Prop_RoomForSale for more information on sold rooms and the flags.  \n\r\
 \n\r\
 When property is sold, it will be listed as the owner with a slash and the price.  \
 Entering this sort of parameter directly is the quick way to give players or clans property.\n\r\
