@@ -168,9 +168,8 @@ Example : afk\n\r\
 Example : afk I am eating.\n\r\
 Short(s): \n\r\
 Notifies the system that you are away from your keyboard.  Entering \
-AFK again, or just entering a new command will reset this status. \
-You may enter an optional message to give to those who attempt to \
-TELL you something.
+AFK again will reset this status. You may enter an optional message \
+to give to those who attempt to TELL you something.
 
 STUCK=\
 Command : STUCK\n\r\
